# hippotools

./: .gitignore  LICENSE  pyproject.toml
docs/: conf.py  index.rst
hippotools/: __init__.py  media.py  seq_utils.py  utils.py
hippotools/diversity/: condition_specific.py  essential.py  iterator.py  map.py  utils.py
hippotools/imat/: create_model.py  sampling.py  utils.py
hippotools/network/: centrality.py  communities.py  metabolite_network.py  reaction_network.py
tests/: test_seq_utils.py  test_utils.py
tests/data/: textbook_model.mat
tests/diversity/: test_condition_specific.py  test_essential.py
tests/imat/: sampling.py  test_create_model.py  test_utils.py
